--- a/app/assets/stylesheets/webstop.css.scss
+++ b/app/assets/stylesheets/webstop.css.scss
@@ -448,17 +448,6 @@ h3 {
   .solution-overview{min-height: 515px;}
   .solution-example{min-height: 415px;}
 
-  body {
-    background: $webstop-blue; /* Old browsers */
-    background: -moz-linear-gradient(top, $webstop-blue 0%, $webstop-blue 665px, #ffffff 665px, #ffffff 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,$webstop-blue), color-stop(665px,$webstop-blue), color-stop(665px,#ffffff), color-stop(100%,#ffffff)); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top, $webstop-blue 0%,$webstop-blue 665px,#ffffff 665px,#ffffff 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top, $webstop-blue 0%,$webstop-blue 665px,#ffffff 665px,#ffffff 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(top, $webstop-blue 0%,$webstop-blue 665px,#ffffff 665px,#ffffff 100%); /* IE10+ */
-    background: linear-gradient(to bottom, $webstop-blue 0%,$webstop-blue 665px,#ffffff 665px,#ffffff 100%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='$webstop-blue', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
-  }
-
   .navbar .nav {
     float: none;
     margin: 10px 0 0 0;
@@ -506,16 +495,6 @@ h3 {
 
 /* Landscape phone to portrait tablet */
 @media (max-width: 767px) {
-    body {
-      background: $webstop-blue; /* Old browsers */
-      background: -moz-linear-gradient(top, $webstop-blue 0%, $webstop-blue 710px, #ffffff 710px, #ffffff 100%); /* FF3.6+ */
-      background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,$webstop-blue), color-stop(710px,$webstop-blue), color-stop(710px,#ffffff), color-stop(100%,#ffffff)); /* Chrome,Safari4+ */
-      background: -webkit-linear-gradient(top, $webstop-blue 0%,$webstop-blue 710px,#ffffff 710px,#ffffff 100%); /* Chrome10+,Safari5.1+ */
-      background: -o-linear-gradient(top, $webstop-blue 0%,$webstop-blue 710px,#ffffff 710px,#ffffff 100%); /* Opera 11.10+ */
-      background: -ms-linear-gradient(top, $webstop-blue 0%,$webstop-blue 710px,#ffffff 710px,#ffffff 100%); /* IE10+ */
-      background: linear-gradient(to bottom, $webstop-blue 0%,$webstop-blue 710px,#ffffff 710px,#ffffff 100%); /* W3C */
-      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='$webstop-blue', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
-    }
 
     section#home {
       margin: 0 0 60px 0;
@@ -541,16 +520,6 @@ h3 {
 
 /* Landscape phones and down */
 @media (max-width: 480px) {
-  body {
-    background: $webstop-blue; /* Old browsers */
-    background: -moz-linear-gradient(top, $webstop-blue 0%, $webstop-blue 668px, #ffffff 668px, #ffffff 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,$webstop-blue), color-stop(668px,$webstop-blue), color-stop(668px,#ffffff), color-stop(100%,#ffffff)); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top, $webstop-blue 0%,$webstop-blue 668px,#ffffff 668px,#ffffff 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top, $webstop-blue 0%,$webstop-blue 668px,#ffffff 668px,#ffffff 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(top, $webstop-blue 0%,$webstop-blue 668px,#ffffff 668px,#ffffff 100%); /* IE10+ */
-    background: linear-gradient(to bottom, $webstop-blue 0%,$webstop-blue 668px,#ffffff 668px,#ffffff 100%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='$webstop-blue', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
-  }
 
   h1, h2{
     text-align: center;
